case-session-affinity-istio/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: sample
spec:
  containers:
    - name: curl-container
      image: curlimages/curl:7.85.0
      command: ["/bin/sh", "-c", "while true; do sleep 3600; done"] # Keep the pod running
      resources:
        limits:
          cpu: "1"
          memory: "1Gi"
  restartPolicy: Never
