case-session-affinity-istio/nginx-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nginx-destination
  namespace: sample
spec:
  host: nginx-service.sample.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: "user-session" # Sticky sessions based on user-session header
